@@ -1,5 +1,9 @@
 # version 0.68
 
+2022-05-25
+- Added installed_plugins table
+
+
 # version 0.67.1
 
 2022-05-12
